+ | Display update et refacto

--- a/CPP-00/ex01/Makefile
+++ b/CPP-00/ex01/Makefile
@@ -12,7 +12,9 @@ OBJ_DIR = objs
 # SOURCE FILES
 SRC = 	main \
 		Contact \
-		PhoneBook
+		PhoneBook \
+		display \
+		command
 
 # FULL PATHS
 SRCS = $(addprefix $(SRC_DIR)/, $(addsuffix .cpp, $(SRC)))
