--- a/CPP-01/ex01/Makefile
+++ b/CPP-01/ex01/Makefile
@@ -2,7 +2,7 @@
 NAME = Moar_brainz!
 
 # COMPILER & FLAGS
-CXX = g++
+CXX = c++
 CXXFLAGS = -Wall -Werror -Wextra -Iincludes -std=c++98
 
 # DIRECTORIES
