--- a/CPP-01/ex02/Makefile
+++ b/CPP-01/ex02/Makefile
@@ -2,21 +2,19 @@
 NAME = HI_THIS_IS_BRAIN
 
 # COMPILER & FLAGS
-CXX = g++
+CXX = c++
 CXXFLAGS = -Wall -Werror -Wextra -Iincludes -std=c++98
 
 # DIRECTORIES
-SRC_DIR = srcs
+SRC_DIR = /
 OBJ_DIR = objs
 
 # SOURCE FILES
-SRC = 	main \
-		Zombie \
-		zombieHorde
+SRC = 	main
 
 # FULL PATHS
-SRCS = $(addprefix $(SRC_DIR)/, $(addsuffix .cpp, $(SRC)))
-OBJS = $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(SRCS))
+SRCS = $(addsuffix .cpp, $(SRC))
+OBJS = $(patsubst /%.cpp, $(OBJ_DIR)/%.o, $(SRCS))
 
 # DEFAULT TARGET
 all: $(NAME)
