+ | ex03 done, a verifier

--- a/CPP-03/ex03/Makefile
+++ b/CPP-03/ex03/Makefile
@@ -14,6 +14,7 @@ SRC = 	main \
 		ClapTrap \
 		ScavTrap \
 		FragTrap \
+		DiamondTrap \
 
 # FULL PATHS
 SRCS = $(addprefix $(SRC_DIR)/, $(addsuffix .cpp, $(SRC)))
