+ | CPP-08 ex01 seams done

--- a/CPP-08/ex01/Makefile
+++ b/CPP-08/ex01/Makefile
@@ -11,6 +11,7 @@ OBJ_DIR = objs
 
 # SOURCE FILES
 SRC = 	main \
+		Span \
 
 # FULL PATHS
 SRCS = $(addprefix $(SRC_DIR)/, $(addsuffix .cpp, $(SRC)))
