--- a/CPP-08/ex02/Makefile
+++ b/CPP-08/ex02/Makefile
@@ -11,7 +11,7 @@ OBJ_DIR = objs
 
 # SOURCE FILES
 SRC = 	main \
-		ScalarConverter \
+		MutantStack \
 
 # FULL PATHS
 SRCS = $(addprefix $(SRC_DIR)/, $(addsuffix .cpp, $(SRC)))
